# hw-05

./: CMakeLists.txt
headers/: i_statistics.hpp
src/: main.cpp  max.cpp  mean.cpp  min.cpp  pct90.cpp  pct95.cpp  std_deviation.cpp
